# segkv

./: .gitignore  .mcp.json  CLAUDE.md  README.md  main.py  memory_cli.py  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: architecture.md  changelog.md  claude-integration.md  cli.md  configuration.md  design.md  getting-started.md  index.md  mcp-server.md  performance.md
docs/api/: lsdb.md  memory-store.md  migration.md
examples/: benchmark.py  cached_memory_store.py  mcp_server.py  tool_agent.py
lsdb/: __init__.py  core.py
memory/: __init__.py  migrate.py  store.py
segkv/: __init__.py  core.py
tests/: test_core.py  test_memory.py
