[project]
name = "lsdb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "ipython>=9.9.0",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pydantic>=2.12.5",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]
