[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lsdb"
version = "0.1.0"
description = "A log-structured storage engine with compaction for Python"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Nana Adjei Manu" }
]
keywords = [
    "database",
    "storage",
    "log-structured",
    "key-value",
    "lsm",
    "embedded",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Database",
    "Topic :: Database :: Database Engines/Servers",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/nanaadjeimanu/lsdb"
Repository = "https://github.com/nanaadjeimanu/lsdb"
Issues = "https://github.com/nanaadjeimanu/lsdb/issues"

[dependency-groups]
dev = [
    "autopep8>=2.3.2",
    "ipython>=9.9.0",
    "isort>=7.0.0",
    "mypy>=1.19.1",
    "pydantic>=2.12.5",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "ruff>=0.14.10",
]

[tool.hatch.build.targets.sdist]
include = [
    "/lsdb",
]

[tool.hatch.build.targets.wheel]
packages = ["lsdb"]
